Fixed overflow issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,7 @@ body {
     padding-left: 25px;
     font-size: 25px;
     background-color: white;
-    height: 90% auto;
+    min-height: 90%;
     width: 400px;
     border-width: 3px 0px 3px 3px;
     border-style: solid;
